--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
     "@prisma/client": "^5.10.2",
+    "@types/mdx": "^2.0.11",
     "@types/swagger-ui-react": "^4.18.3",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
