--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/themes": "^2.0.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.11",
     "@types/swagger-ui-react": "^4.18.3",
+    "ahooks": "^3.7.10",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
