--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ahooks": "^3.7.10",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "next-swagger-doc": "^0.4.0",
